# sensedesk

./: engd.md  package-lock.json  package.json  prd.md
.claude/docs/: architecture_deep_dive.md  eng_design.md  implementation_plan.md
.github/workflows/: release.yml
frontend/src/: App.tsx
scripts/: bump-version.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/embedding/: client.rs
src-tauri/src/indexer/: crawler.rs  watcher.rs
src-tauri/src/indexer/embedding/: client.rs  types.rs
src-tauri/src/store/: metadata.rs  mod.rs  vector.rs
src/components/: ResultList.tsx  SearchBar.tsx  SetupScreen.tsx  VishLogo.tsx
src/components/Settings/: SettingsPanel.tsx
src/hooks/: useAppState.ts
