[package]
name = "sensedesk"
version = "0.1.0"
description = "A local-first desktop app for semantic search"
authors = ["yakshith"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sensedesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "migrate"] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
pdf-extract = "0.7"
tauri-plugin-dialog = "2"
qdrant-client = "1.9"
dirs-next = "2"
